Made some tests oblivious to OS and FS